src/pages/home/scss/_en.scss
body.en {
  .page-start {
    .page-start__title-wrapper {
      .page-start__title {
        width: 356px;
        height: 184px;
        margin-bottom: 20px;
      }
      .page-start__sub-title {
        font-size: 14px;
        font-weight: $bold;
      }
    }
    .page-start__content-wrapper {
      .page-start__content-slogan {
        font-size: 14px;
      }
    }
    @media screen and (max-height: 560px){
      .page-start__title-wrapper {
        .page-start__title {
          width: 320px;
          height: 164px;
          margin-bottom: 0px;
        }
      }
    }
  }

  .page-quiz {
    .page-quiz__card-wrapper {
      .page-quiz__card {
        p {
          letter-spacing: 0px;
          font-weight: $bold;
        }
        button {
          font-size: 14px;
          font-weight: $bold;
        }
      }
      .q3 {
        .q3__text {
          width: 299px;
        }
      }
    }
    .page-quiz__control {
      .control__btn {
        font-size: 14px;
        font-weight: $bold;
      }
    }
  }
}

